--- a/a7/views/home.handlebars
+++ b/a7/views/home.handlebars
@@ -1,1 +1,3 @@
 <h1>The Home Page</h1>
+<p>Get works like in the example, however post continues to register as a 404 page.</p>
+<p>I tried it in the advanced rest client and it made the base post html but no data was outputed.</p>
