--- a/a7/views/get-loopback-improved.handlebars
+++ b/a7/views/get-loopback-improved.handlebars
@@ -4,3 +4,6 @@
     <li>{{this.name}}: {{this.value}}
   {{/each}}
 </ul>
+
+<p>Get works like in the example, however post continues to register as a 404 page.</p>
+<p>I tried it in the advanced rest client and it made the base post html but no data was outputed.</p>
