--- a/dbint/Views/home.handlebars
+++ b/dbint/Views/home.handlebars
@@ -1,1 +1,32 @@
-<h1>Change data by hitting the buttons</h1>
+<h1>Exercise List</h1>
+{{result}}
+<h2>Insert</h2>
+<form>
+  Rep Name:<input type="text" name="name"><br>
+  How many reps?<input type="number" name="reps"><br>
+  Weight of weights used:<input type="number" name="weight"><br>
+  Date:<input type="date" name="date"><br>
+  lbs<input type="radio" name="lbs"><br>
+  kgs<input type="radio" name="kgs"><br>
+  <input type="submit" value="submit"><br>
+</form>
+<h2>Update</h2>
+<form>
+   Rep Name:<input type="text" name="name"><br>
+  How many reps?<input type="number" name="reps"><br>
+  Weight of weights used:<input type="number" name="weight"><br>
+  Date:<input type="date" name="date"><br>
+  lbs<input type="radio" name="lbs"><br>
+  kgs<input type="radio" name="kgs"><br>
+  <input type="submit" value="submit"><br>
+</form>
+<h2>Delete</h2>
+<form>
+  Rep Name:<input type="text" name="name"><br>
+  How many reps?<input type="number" name="reps"><br>
+  Weight of weights used:<input type="number" name="weight"><br>
+  Date:<input type="date" name="date"><br>
+  lbs<input type="radio" name="lbs"><br>
+  kgs<input type="radio" name="kgs"><br>
+  <input type="submit" value="submit"><br>
+</form>
