--- a/dbint/Views/home.handlebars
+++ b/dbint/Views/home.handlebars
@@ -2,31 +2,31 @@
 {{result}}
 <h2>Insert</h2>
 <form>
-  Rep Name:<input type="text" name="name"><br>
-  How many reps?<input type="number" name="reps"><br>
-  Weight of weights used:<input type="number" name="weight"><br>
-  Date:<input type="date" name="date"><br>
-  lbs<input type="radio" name="lbs"><br>
-  kgs<input type="radio" name="kgs"><br>
-  <input type="submit" value="submit"><br>
+  Rep Name:<input type="text" name="name1"><br>
+  How many reps?<input type="number" name="reps1"><br>
+  Weight of weights used:<input type="number" name="weight1"><br>
+  Date:<input type="date" name="date1"><br>
+  lbs<input type="radio" name="lbs1"><br>
+  kgs<input type="radio" name="kgs1"><br>
+  <input type="submit" value="submit1"><br>
 </form>
 <h2>Update</h2>
 <form>
-   Rep Name:<input type="text" name="name"><br>
-  How many reps?<input type="number" name="reps"><br>
-  Weight of weights used:<input type="number" name="weight"><br>
-  Date:<input type="date" name="date"><br>
-  lbs<input type="radio" name="lbs"><br>
-  kgs<input type="radio" name="kgs"><br>
-  <input type="submit" value="submit"><br>
+   Rep Name:<input type="text" name="name2"><br>
+  How many reps?<input type="number" name="reps2"><br>
+  Weight of weights used:<input type="number" name="weight2"><br>
+  Date:<input type="date" name="date2"><br>
+  lbs<input type="radio" name="lbs2"><br>
+  kgs<input type="radio" name="kgs2"><br>
+  <input type="submit" value="submit2"><br>
 </form>
 <h2>Delete</h2>
 <form>
-  Rep Name:<input type="text" name="name"><br>
-  How many reps?<input type="number" name="reps"><br>
-  Weight of weights used:<input type="number" name="weight"><br>
-  Date:<input type="date" name="date"><br>
-  lbs<input type="radio" name="lbs"><br>
-  kgs<input type="radio" name="kgs"><br>
-  <input type="submit" value="submit"><br>
+  Rep Name:<input type="text" name="name3"><br>
+  How many reps?<input type="number" name="reps3"><br>
+  Weight of weights used:<input type="number" name="weight3"><br>
+  Date:<input type="date" name="date3"><br>
+  lbs<input type="radio" name="lbs3"><br>
+  kgs<input type="radio" name="kgs3"><br>
+  <input type="submit" value="submit3"><br>
 </form>
